chore(datahandler): migrate deprecated APIs
Migrate deprecated APIs:
1. Change from `URL(String)` to `URI(String).toURL()`.
2. Get builder from `CSVFormat.RFC4180` to change parameters.
3. Change from `MavenXpp3Reader` to `MavenStaxReader` from v4 of Maven.
4. Migrate Jackson `addMixInAnnotations` to `addMixIn`.
5. Replace `UnauthorizedUserException` with `BadCredentialsException`.

Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>