@@ -269,8 +269,8 @@ public class TestUtils {
 
     public static void assumeCanConnectTo(String url) {
         try {
-            new URL(url).openConnection().getInputStream().close();
-        } catch (IOException e) {
+            new URI(url).toURL().openConnection().getInputStream().close();
+        } catch (IOException | URISyntaxException e) {
             assumeNoException(e);
         }
     }
